Add a simple chatbot

--- a/app/presentation/web/templates/layout.html
+++ b/app/presentation/web/templates/layout.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="{{ assets['css/main.css'] }}">
   </head>
   <body>
-    {% block content %}{% endblock content %}
+    {% block content %}
+    {% endblock content %}
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/ws.js"></script>
     <script src="{{ assets['js/main.js'] }}"></script>
   </body>
 </html>
